--- a/src/client/css/themes.css
+++ b/src/client/css/themes.css
@@ -13,7 +13,7 @@
   --light-blue:#94bedd;
   --deep-blue:#7ab0d4;
   --grey:grey;
-  --mid-grey:#595a5a46;
+  --mid-grey:#595a5a;
   --light-gray:#f0f0f5;
   --button-blue:#0568aa;
   --black:#050505;
@@ -22,15 +22,19 @@
   box-sizing: border-box;
 }
 body{
-  margin: 0;
-  padding: 0;
 }
 nav{
-  padding: 0rem;
+}
+label{
+  font-family: "Nexa-Light";
+  font-size: .8rem;
+  font-weight: 500;
+  letter-spacing: 1px; 
+  color: var(--grey);
+  line-height: 1rem;
 }
 h1, h2, h3, h4,h5, h6{
   font-family: "Nexa-Bold";
-  color: var(--dark-blue);
   line-height: 2rem;
   letter-spacing: .05rem;
 }
@@ -55,15 +59,12 @@ font-size:.8rem;
 p{
   font-family: "Nexa-Light";  
   font-size: 1rem;
-  color: var(--dark-blue);
   word-spacing: 0.08rem;  
   letter-spacing: 0.05rem;    
   line-height: 1.5;
-  padding: 1rem;
   font-weight: 100;
 }
 a{
-padding: 1rem;
 }
 input{
 font-family: "Nexa-Light";
@@ -72,8 +73,16 @@ color: var(--dark-blue);
 letter-spacing: 0.05rem;
 width: 100%;
 border: none;
-height: 60px;
+height: 40px;
+text-indent: 1.2rem;
 }
+
+input[type="checkbox"]
+    {
+      width: 15px;
+      height: 15px;
+      border-color: var(--mid-grey);
+    }
 ::placeholder{
 font-family: "Nexa-Light";
 font-size: .8rem;
@@ -81,7 +90,6 @@ color: gray;
 letter-spacing: 0.05rem;
 }
 button{
-color: white;
 border: none;
 font-size: .9rem;
 letter-spacing: .05rem;
@@ -89,6 +97,9 @@ font-weight: lighter;
 }
 .primary{
 background-color: var(--dark-blue);
+padding:.5rem 1rem;
+font-size: .8rem;
+color: white;
 }
 .secondary{
 background-color: var(--sky-blue);
@@ -96,12 +107,18 @@ background-color: var(--sky-blue);
 .doctor-button{
   background-color: var(--mid-grey);
   color: var(--black);
+  width: 100%;
 }
 .third{
   background-color: white;
   color: var(--dark-blue);
   border: 1px solid;
   border-color: var(--dark-blue);
+}
+.show-more{
+color: var(--sky-blue);
+background-color: white;
+font-size: .9rem;
 }
 li{
 font-family: "Nexa-Light";
@@ -114,7 +131,6 @@ letter-spacing: 0.05rem;
 }
 @media only screen and (min-width: 768px){
   nav{
-    padding: .5rem;
   }
   h1{
     font-size: 1.6rem;
@@ -135,6 +151,7 @@ letter-spacing: 0.05rem;
     letter-spacing: 0.05rem;
     width: 100%;
     border: none;
+    height: 40px;
     }
     ::placeholder{
     font-family: "Nexa-Light";
@@ -148,7 +165,6 @@ letter-spacing: 0.05rem;
       font-size: .8rem;
       letter-spacing: .1rem;
       border-radius: 0%;
-      padding: inherit;
       }
       .primary{
       background-color: var(--dark-blue);
@@ -159,7 +175,6 @@ letter-spacing: 0.05rem;
 }
 @media only screen and (min-width: 1024px){
   nav{
-    padding: .5rem;
   }
   h1{
     font-size: 2.3rem;
@@ -182,6 +197,7 @@ letter-spacing: 0.05rem;
     letter-spacing: 0.05rem;
     width: 100%;
     border: none;
+    height: 50px;
     }
     ::placeholder{
     font-family: "Nexa-Light";
@@ -200,5 +216,10 @@ letter-spacing: 0.05rem;
       }
       .secondary{
       background-color: var(--sky-blue);
+      }
+      .navButton1, .navButton2{
+        border-radius: 5px;
+        padding: .8rem 1rem;
+        font-size: .7rem;
       }
 }
