index and doctor pages linked

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -15,7 +15,7 @@
             <div class="nav-desktop">
                 <div class="desktop-nav">          
                     <ul>                        
-                        <li>Doctors</li>
+                        <li><a href="doctor.html">Doctors</a></li>    
                         <li>Hospitals</li>
                         <li>Treatment</li>
                         <li>Other Services</li>
@@ -338,7 +338,7 @@
                 </figure> 
                 <div class="foot-list">          
                     <ul>
-                        <li>Doctor</li>
+                        <li><a href="doctor.html">Doctors</a></li>  
                         <li>Hospital</li>
                         <li>Treatments</li>
                         <li>Other Services</li>
