--- a/src/client/views/doctor.html
+++ b/src/client/views/doctor.html
@@ -13,8 +13,8 @@
             <div class="desktop">
                 <div class="desktop-nav">          
                     <ul>                        
-                        <li>Doctors</li>
-                        <li>Hospitals</li>
+                        <li><a href="doctor.html">Doctors</a></li>
+                        <li><a href="hospital.html">Hospitals</a></li>
                         <li>Treatment</li>
                         <li>Other Services</li>
                         <li>About</li>
@@ -709,9 +709,9 @@
                 </figure> 
                 <div class="foot-list">   
                     <h1 class="mob">TVASTRA</h1>       
-                    <ul>
-                        <li>Doctor</li>
-                        <li>Hospital</li>
+                    <ul>                       
+                        <li><a href="doctor.html">Doctors</a></li>
+                        <li><a href="hospital.html">Hospitals</a></li>
                         <li>Treatment</li>
                         <li>Other Services</li>
                         <li>FAQs</li>
