--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -16,7 +16,7 @@
                 <div class="desktop-nav">          
                     <ul>                        
                         <li><a href="doctor.html">Doctors</a></li>    
-                        <li>Hospitals</li>
+                        <li><a href="hospital.html">Hospitals</a></li>
                         <li>Treatment</li>
                         <li>Other Services</li>
                         <li>About</li>
@@ -339,7 +339,7 @@
                 <div class="foot-list">          
                     <ul>
                         <li><a href="doctor.html">Doctors</a></li>  
-                        <li>Hospital</li>
+                        <li><a href="hospital.html">Hospitals</a></li>
                         <li>Treatments</li>
                         <li>Other Services</li>
                         <li>FAQs</li>
