upto doctor profile

--- a/src/client/css/signup.css
+++ b/src/client/css/signup.css
@@ -5,8 +5,8 @@
     --light-blue:#94bedd;
     --deep-blue:#7ab0d4;
     --grey:grey;
-    --mid-grey:#595a5a46;
-    --light-gray:rgb(190, 190, 192);
+    --mid-grey:#0707074d;
+    --light-gray:rgb(222, 222, 224);
     --button-blue:#0568aa;
     --black:#bbbaba;
   }  
@@ -19,11 +19,9 @@
     src: url(../fonts/Nexa-Light.otf) format('truetype')
   }
   .top-nav{
-    position: relative;
-    width: 100%;
     padding: 1rem;
     display: grid;
-    grid-template-areas: "logo-tvastra fas";
+    grid-template-columns: 1fr 1fr;
   }
   .top-nav .logo-tvastra
   {  
@@ -33,23 +31,27 @@
     font-size: 15px;
     color:var(--grey);
     align-self: center;
+    justify-self: flex-end;
   }
   .container{    
     background-color: var(--deep-blue);
     padding: 1rem;
   }
-  .loginBox{  
+  .signUpBox{  
     background-color: white;
-    margin: 10rem 0rem;
+    margin: 3rem 0rem;
   }
-  .loginBoxhead{
+  .signUpBoxhead{
       text-align: center;
       color: var(--sky-blue);
-      padding: 1rem;
+      padding: 2rem 1rem;
       border-bottom: solid 1px var(--light-gray);
   }
   .inputContainer{
     padding: 1rem;
+    display: flex;
+    flex-wrap: wrap;
+    grid-gap: .5rem;
   }
   .mobNumInput{
       position: relative;
@@ -63,31 +65,37 @@
       color: var(--light-gray);
       font-size: 1.2rem;
   }
-  .loginButton{
+  .signUpButton{
     position: relative;
-      padding:.5rem 0rem
+    padding: 0rem;
+    width: 100%;
   }
-  .loginButton button{
+  .signUpButton button{
       width: 100%;
-      height: 60px;
+      height: 45px;
       font-size: 1rem;
       letter-spacing: .25rem;
-      font-weight: 600;
+      font-weight: 500;
     }
-    .loginButton .fas{
+    .signUpButton .fas{
         position: absolute;
         right: 5%;
         top: 50%;
         transform: translateY(-70%);
         color: white;
     }
-  .inputContainer input{
+  .inputContainer input, .inputContainer select{
       border: solid 1px var(--light-gray);
-      height: 60px;
+      height: 35px;
   }
-  ::placeholder{
-    font-weight: 800;
-    color: var(--light-gray);
+  ::placeholder,select{
+    color:var(--mid-grey);
+    font-weight: bolder;
+    font-family: Nexa-Bold;
+  }
+  .subInput{
+    width: 48%;
+    display: inline-block;
   }
   .redirect{
       text-align: center;
@@ -125,26 +133,18 @@
     display: none;
   }
   @media only screen and (min-width: 768px){  
-  .top-nav{
-      position: relative;
-      width: 100%;
-      padding: 1.5rem;
-      display: grid;
-      grid-template-areas: "logo-tvastra fas";
-    }
-    .top-nav .logo-tvastra
-    {  
-      width: 25%;
-    }
-    .top-nav .fa-bars{ 
-      position: absolute;
-      right: 1.5rem;
-      transform: translateX(-50%);
-      font-size: 18px;
-      color:var(--grey);
-    }
-    .loginBox{
-      margin: 15rem 8rem;
+    .top-nav{
+        padding: 2rem;
+      }
+      .top-nav .logo-tvastra
+      {  
+        width: 50%;
+      }
+      .top-nav .fa-bars{ 
+        font-size: 18px;
+      }
+    .signUpBox{
+      margin: 8rem;
     }
     .mob{
       display: none;
@@ -181,7 +181,6 @@
     .desktop-nav{
       padding: 0rem;
       justify-self: center;
-
     }
     .desktop-nav ul{
       list-style-type: none;
@@ -197,12 +196,26 @@
     }
     .navButtons{
       align-self: center;
-      justify-self: center;
+      justify-self: flex-end;
     }
-    
-    .loginBox{
-      margin: 15rem 25rem;
+    .container{
+      position: relative;
+      height: 1000px;
+    }    
+    .signUpBox{
+      margin: 0rem;
+      width: 45%;
+      position: absolute;
+      top: 50%; right: 50%;
+      transform: translate(50%,-50%);
       box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    }
+    .foot-rights{
+      position: absolute;
+      bottom: 3%;
+      left: 50%;
+      transform: translateX(-50%);
+
     }
     .mob{
       display: none;
