--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -341,7 +341,7 @@
                         <li><a href="doctor.html">Doctors</a></li>  
                         <li><a href="hospital.html">Hospitals</a></li>
                         <li>Treatments</li>
-                        <li>Other Services</li>
+                        <li>Contact</li>
                         <li>FAQs</li>
                     </ul>
                 </div> 
