--- a/src/client/css/doctor.css
+++ b/src/client/css/doctor.css
@@ -24,20 +24,19 @@ h1,h2,h4,p,li{
   letter-spacing: 0.01rem;
 }
 .top-nav{
-  position: relative;
-  width: 100%;
   padding: 1rem;
   display: grid;
-  grid-template-areas: "logo-tvastra fas";
+  grid-template-columns: 1fr 1fr;
 }
 .top-nav .logo-tvastra
 {  
-  width: 40%;
+  width: 35%;
 }
 .top-nav .fa-bars{ 
-  font-size: 18px;
+  font-size: 15px;
   color:var(--grey);
   align-self: center;
+  justify-self: flex-end;
 }
   .home{
       color: var(--black);
@@ -189,24 +188,17 @@ font-size: .8rem;
 .tab-desktop{
   display: none;
 }
-@media only screen and (min-width: 768px){  
-.top-nav{
-    position: relative;
-    width: 100%;
-    padding: 2rem;
-    display: grid;
-    grid-template-areas: "logo-tvastra fas";
-  }
-  .top-nav .logo-tvastra
-  {  
-    width: 20%;
-  }
-  .top-nav .fa-bars{ 
-    position: absolute;
-    right: 2rem;
-    font-size: 15px;
-    color:var(--grey);
-  }
+@media only screen and (min-width: 768px){ 
+  .top-nav{
+      padding: 2rem;
+    }
+    .top-nav .logo-tvastra
+    {  
+      width: 50%;
+    }
+    .top-nav .fa-bars{ 
+      font-size: 18px;
+    }
   .doctor-searchBox{
     position: relative;
     font-family:Nexa-Light;
@@ -582,7 +574,6 @@ font-size: .8rem;
   .desktop-nav{
     padding: 0rem;
     justify-self: center;
-
   }
   .desktop-nav ul{
     list-style-type: none;
@@ -598,7 +589,7 @@ font-size: .8rem;
   }
   .navButtons{
     align-self: center;
-    justify-self: center;
+    justify-self: flex-end;
   }
   .doctor-searchBox h3{
     padding:5rem;
