--- a/src/client/css/hospital.css
+++ b/src/client/css/hospital.css
@@ -27,20 +27,19 @@
       font-size: 1.5rem;
   }
   .top-nav{
-    position: relative;
-    width: 100%;
     padding: 1rem;
     display: grid;
-    grid-template-areas: "logo-tvastra fas";
+    grid-template-columns: 1fr 1fr;
   }
   .top-nav .logo-tvastra
   {  
-    width: 40%;
+    width: 35%;
   }
   .top-nav .fa-bars{ 
-    font-size: 18px;
+    font-size: 15px;
     color:var(--grey);
     align-self: center;
+    justify-self: flex-end;
   }
     .home{
         color: var(--black);
@@ -216,25 +215,17 @@
   .tab-desktop{
     display: none;
   }
-  @media only screen and (min-width: 768px){  
-  .top-nav{
-      position: relative;
-      width: 100%;
-      padding: 1rem;
-      display: grid;
-      grid-template-areas: "logo-tvastra fas";
-    }
-    .top-nav .logo-tvastra
-    {  
-      width: 20%;
-    }
-    .top-nav .fa-bars{ 
-      position: absolute;
-      right: 1rem;
-      transform: translateX(-50%);
-      font-size: 15px;
-      color:var(--grey);
-    }
+  @media only screen and (min-width: 768px){ 
+    .top-nav{
+        padding: 2rem;
+      }
+      .top-nav .logo-tvastra
+      {  
+        width: 50%;
+      }
+      .top-nav .fa-bars{ 
+        font-size: 18px;
+      }
     .home{
         padding: 1rem 2rem;
     }
@@ -422,7 +413,6 @@
     .desktop-nav{
       padding: 0rem;
       justify-self: center;
-
     }
     .desktop-nav ul{
       list-style-type: none;
@@ -438,7 +428,7 @@
     }
     .navButtons{
       align-self: center;
-      justify-self: center;
+      justify-self: flex-end;
     }
     .hospital-searchBox{
       position: relative;
