--- a/src/client/css/index.CSS
+++ b/src/client/css/index.CSS
@@ -19,24 +19,20 @@ img
 object-fit: contain;
 }
 .top-nav{
-  position: relative;
-  width: 100%;
   padding: 1rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
-.top-nav figure{
+.top-nav .logo-tvastra
+{  
   width: 35%;
 }
-.top-nav .nav-desktop{
-  display: none;
-}
-.top-nav .fa-bars{
-  position: absolute; 
-  top: 40%;
-  left: 90%;
+.top-nav .fa-bars{ 
   font-size: 15px;
   color:var(--grey);
+  align-self: center;
+  justify-self: flex-end;
 }
-
 h1, h2, h3{
   padding: 1.5rem 1rem .5rem 1rem;
   text-align: center;
@@ -305,21 +301,16 @@ bottom: 50%;
   .desktop{
     display: none;
   }
-   .top-nav{
-    padding:2rem;
-    position: relative;
-  }
-  .top-nav figure{
-  width: 15%;
-}
-  .top-nav .fa-bars{
-    left: auto;
-    right: 2rem;
-    font-size: 1rem;
-  }
-  .top-nav .nav-desktop{
-  display: none;
-}
+  .top-nav{
+      padding: 2rem;
+    }
+    .top-nav .logo-tvastra
+    {  
+      width: 50%;
+    }
+    .top-nav .fa-bars{ 
+      font-size: 18px;
+    }
 h1, h2, h3,h4{
   padding: 2rem 2rem 1rem 2rem;
   text-align: center;
@@ -603,7 +594,6 @@ border-radius: 10px;
     .desktop-nav{
       padding: 0rem;
       justify-self: center;
-
     }
     .desktop-nav ul{
       list-style-type: none;
@@ -619,7 +609,7 @@ border-radius: 10px;
     }
     .navButtons{
       align-self: center;
-      justify-self: center;
+      justify-self: flex-end;
     }
     h1, h2, h3,h4{
       padding: 4rem 5rem 1rem 5rem;
