--- a/src/client/css/login.css
+++ b/src/client/css/login.css
@@ -19,11 +19,9 @@
     src: url(../fonts/Nexa-Light.otf) format('truetype')
   }
   .top-nav{
-    position: relative;
-    width: 100%;
     padding: 1rem;
     display: grid;
-    grid-template-areas: "logo-tvastra fas";
+    grid-template-columns: 1fr 1fr;
   }
   .top-nav .logo-tvastra
   {  
@@ -33,6 +31,7 @@
     font-size: 15px;
     color:var(--grey);
     align-self: center;
+    justify-self: flex-end;
   }
   .container{    
     background-color: var(--deep-blue);
@@ -125,24 +124,16 @@
     display: none;
   }
   @media only screen and (min-width: 768px){  
-  .top-nav{
-      position: relative;
-      width: 100%;
-      padding: 1.5rem;
-      display: grid;
-      grid-template-areas: "logo-tvastra fas";
-    }
-    .top-nav .logo-tvastra
-    {  
-      width: 25%;
-    }
-    .top-nav .fa-bars{ 
-      position: absolute;
-      right: 1.5rem;
-      transform: translateX(-50%);
-      font-size: 18px;
-      color:var(--grey);
-    }
+    .top-nav{
+        padding: 2rem;
+      }
+      .top-nav .logo-tvastra
+      {  
+        width: 50%;
+      }
+      .top-nav .fa-bars{ 
+        font-size: 18px;
+      }
     .loginBox{
       margin: 15rem 8rem;
     }
@@ -181,7 +172,6 @@
     .desktop-nav{
       padding: 0rem;
       justify-self: center;
-
     }
     .desktop-nav ul{
       list-style-type: none;
@@ -197,9 +187,8 @@
     }
     .navButtons{
       align-self: center;
-      justify-self: center;
+      justify-self: flex-end;
     }
-    
     .loginBox{
       margin: 15rem 25rem;
       box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
