--- a/src/client/css/themes.css
+++ b/src/client/css/themes.css
@@ -1,5 +1,4 @@
 @font-face {
-<<<<<<< HEAD
   font-family: "Nexa-Bold";
   src: url(../fonts/Nexa-Bold.otf) format('truetype')
 }
@@ -13,29 +12,6 @@
   --dark-blue:#152238;
   --light-blue:#94bedd;
   --grey:grey;
-=======
-    font-family: "Nexa-Bold";
-    src: url(../fonts/Nexa-Bold.otf) format('truetype')
-  }
-  @font-face {
-    font-family: "Nexa-Light";
-    src: url(../fonts/Nexa-Light.otf) format('truetype')
-  }
-  :root{
-    --sky-blue:#1da1f2;
-    --lt-skyblue:#87CEEB;
-    --dark-blue:#152238;
-    --light-blue:#94bedd;
-    --grey:grey;
-  }
-  body{
-        
-  }
-html{
-height: 100%;
-margin: auto;
-display: table;
->>>>>>> 1bc5f9f (Theme file)
 }
 * {
   box-sizing: border-box;
@@ -119,14 +95,10 @@ background-color: var(--sky-blue);
   border-color: var(--dark-blue);
 }
 li{
-<<<<<<< HEAD
 font-family: "Nexa-Light";
 color: var(--dark-blue);
 padding-bottom: .5rem;
 font-size: .8rem;
-=======
-  font-family: "Nexa-Light";
->>>>>>> 1bc5f9f (Theme file)
 }
 ul{
 font-family: "Nexa-Light";
@@ -231,4 +203,10 @@ letter-spacing: 0.05rem;
       .secondary{
       background-color: var(--sky-blue);
       }
+}
+ul{
+  font-family: "Nexa-Light";
+  font-size: .8rem;
+  letter-spacing: 0.05rem;
+  padding: .5rem;
 }
