--- a/src/client/css/themes.css
+++ b/src/client/css/themes.css
@@ -225,68 +225,9 @@ letter-spacing: 0.05rem;
       .secondary{
       background-color: var(--sky-blue);
       }
-}
-ul{
-  font-family: "Nexa-Light";
-  font-size: .8rem;
-  color: var(--dark-blue);
-  letter-spacing: 0.05rem;
-  padding: .5rem;
-}
-footer{
-  padding: 1rem;
-}
-@media only screen and (min-width: 768px)
-{
-  h1{
-        font-size: 2.2rem;
-    }    
-  h2{
-        font-size:2rem;
-    }
-  h3{
-        font-size: 1.6rem;
-    }
-  h4{
-        font-size: 1.4rem;
-    }
-  h5{
-        font-size: 1.2rem;
-    }
-  h6{
-      font-size: 1rem;
-  }
-  p{
-    font-size: 1.2rem;
-    word-spacing: 0.1rem;  
-    letter-spacing: 0.05rem;    
-    line-height: 1.6;
-    }
-}
-
-@media only screen and (min-width: 1024px){
-  h1{
-      font-size: 2.4rem;
-  }    
-  h2{
-      font-size:2.2rem;
-  }
-  h3{
-      font-size: 1.8rem;
-  }
-  h4{
-      font-size: 1.6rem;
-  }
-  h5{
-      font-size: 1.4rem;
-  }
-  h6{
-    font-size: 1.2rem;
-  }
-  p{
-  font-size: 1.4rem;
-  word-spacing: 0.1rem;  
-  letter-spacing: 0.05rem;    
-  line-height: 1.8;
-  }
+      .navButton1, .navButton2{
+        border-radius: 5px;
+        padding: .5rem 1rem;
+        font-size: .8rem;
+      }
 }
