--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -16,7 +16,7 @@
                     <ul>                            
                         <li><a href="doctor.html">Doctors</a></li>
                         <li><a href="hospital.html">Hospitals</a></li>
-                        <li>Treatment</li>
+                        <li><a href="treatments.html">Treatments</a></li>
                         <li>Other Services</li>
                         <li>About</li>
                     </ul>
