--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
         <link rel="stylesheet" href="../css/reset.css">
         <link rel="stylesheet" href="../css/themes.css">
-        <link rel="stylesheet" href="../css/index.CSS">               
+        <link rel="stylesheet" href="../css/index.css">               
     </head>
     <body>
         <nav class="top-nav">
@@ -18,7 +18,7 @@
                         <li><a href="hospital.html">Hospitals</a></li>
                         <li><a href="treatments.html">Treatments</a></li>
                         <li>Other Services</li>
-                        <li>About</li>
+                        <li><a href="aboutUs.html">About</a></li>
                     </ul>
             </div>
             <div class="navButtons desktop">
