--- a/src/client/views/contact.html
+++ b/src/client/views/contact.html
@@ -13,13 +13,13 @@
                 <img class="logo-tvastra" src="https://s3.ap-south-1.amazonaws.com/appdev.konfinity.com/css/tasks/footer.png" >
             </div>
             <div class="desktop-nav desktop">          
-                <ul>                            
-                    <li><a href="doctor.html">Doctors</a></li>
-                    <li><a href="hospital.html">Hospitals</a></li>
-                    <li><a href="treatments.html">Treatments</a></li>
-                    <li>Other Services</li>
-                    <li><a href="aboutUs.html">About</a></li>
-                </ul>
+                    <ul>                            
+                        <li><a href="doctor.html">Doctors</a></li>
+                        <li><a href="hospital.html">Hospitals</a></li>
+                        <li>Treatment</li>
+                        <li>Other Services</li>
+                        <li>About</li>
+                    </ul>
             </div>
             <div class="navButtons desktop">
                         <button class="third navButton1">
