--- a/src/client/views/doctor.html
+++ b/src/client/views/doctor.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
         <link rel="stylesheet" href="../css/reset.css">
         <link rel="stylesheet" href="../css/themes.css">
-        <link rel="stylesheet" href="../css/doctor.css">               
+        <link rel="stylesheet" href="../css/doctor.CSS">               
     </head>
     <body>
         <nav class="top-nav">
@@ -13,13 +13,13 @@
                 <img class="logo-tvastra" src="https://s3.ap-south-1.amazonaws.com/appdev.konfinity.com/css/tasks/footer.png" >
             </div>
             <div class="desktop-nav desktop">          
-                <ul>                            
-                    <li><a href="doctor.html">Doctors</a></li>
-                    <li><a href="hospital.html">Hospitals</a></li>
-                    <li><a href="treatments.html">Treatments</a></li>
-                    <li>Other Services</li>
-                    <li><a href="aboutUs.html">About</a></li>
-                </ul>
+                    <ul>                            
+                        <li><a href="doctor.html">Doctors</a></li>
+                        <li><a href="hospital.html">Hospitals</a></li>
+                        <li>Treatment</li>
+                        <li>Other Services</li>
+                        <li>About</li>
+                    </ul>
             </div>
             <div class="navButtons desktop">
                         <button class="third navButton1">
