--- a/src/client/views/hospital.html
+++ b/src/client/views/hospital.html
@@ -16,9 +16,9 @@
                     <ul>                            
                         <li><a href="doctor.html">Doctors</a></li>
                         <li><a href="hospital.html">Hospitals</a></li>
-                        <li>Treatment</li>
+                        <li><a href="treatments.html">Treatments</a></li>
                         <li>Other Services</li>
-                        <li>About</li>
+                        <li><a href="aboutUs.html">About</a></li>
                     </ul>
             </div>
             <div class="navButtons desktop">
@@ -401,13 +401,11 @@
                 </div> 
                 <div class="foot-list mob">
                     <h1>FOLLOW US</h1>
-                    <ul>
-                        <li>Facebook</li>
-                        <li>Pinterest</li>
-                        <li>Twitter</li>
-                        <li>Google+</li>
-                        <li>Instagram</li>
-                    </ul>
+                    <li><a href="doctor.html">Doctors</a></li>
+                        <li><a href="hospital.html">Hospitals</a></li>
+                        <li><a href="treatments.html">Treatments</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="FAQ.html">FAQs</a></li>
                 </div>
                 <div class="socialMedia tab-desktop">
                     <i class="fab fa-facebook-f"></i>
