--- a/src/client/views/FAQ.html
+++ b/src/client/views/FAQ.html
@@ -1,11 +1,11 @@
 <html>
     <head>
-        <title>Tvastra.com</title>
+        <title>Tvastra/Doctor's Profile</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
         <link rel="stylesheet" href="../css/reset.css">
         <link rel="stylesheet" href="../css/themes.css">
-        <link rel="stylesheet" href="../css/contact.css">               
+        <link rel="stylesheet" href="../css/FAQ.css">               
     </head>
     <body>
         <nav class="top-nav">
@@ -32,44 +32,26 @@
             <i class="fas fa-bars mob-tab"></i>
         </nav>
 
-        <section class="contactHead">
-            <h1>Contact Us</h1>
-            <p>Home/Contact Us</p>
+        <section class="about">
+            <h1>FAQ</h1>
+            <p>Home/FAQ</p>
         </section>
 
-        <section class="mapImage">
-
-        </section>
-
-        <section class="contactSection">
-            <div class="contact">
-                <div class="contactDetails detail1">
-                    <i class="fas fa-home"></i>
-                    <h4>Noida, India</h4>
-                    <p>Sector 45</p>
-                </div>
-                <div class="contactDetails detail2">
-                    <i class="fas fa-phone"></i>
-                    <h4>00 (440) 9865 562</h4>
-                    <p>Mon to Fri 9am to 6pm</p>
-                </div>
-                <div class="contactDetails detail3">
-                    <i class="fas fa-home"></i>
-                    <h4>support@tvastra.com</h4>
-                    <p>Send us your query anytime!</p>
-                </div>
-            </div>            
-            <div class="inputContainer">
-                <input class="ip1" type="text" placeholder="Enter your name">
-                <input class="ip2" type="text" placeholder="Enter your email address">
-                <input class="ip3" type="text" placeholder="Enter subject">
-                <input class="ip4" type="text" placeholder="Enter message">
-                <div class="messageButton">
-                    <button class="secondary" type="submit">Send Message</button> 
-                </div>
+        <section class="mainContainer">
+            <div class="subContainer">
             </div>
         </section>
         
+        <section class="container6">
+            <div class="subcontainer6">
+                <h2 class="cont6-1">Need Help?</h2>
+                <p class="cont6-2">Just let us know, we will be happy to assist you.</p>
+                <div class="cont6-3 ">
+                    <button class="secondary ">Submit your query</button>
+                </div>
+            </div>
+        </section>
+
         <section class="container7">
                 <figure class="foot-image">
                     <img class="footer-image" src="https://s3.ap-south-1.amazonaws.com/appdev.konfinity.com/css/tasks/footer.png" alt="">
