--- a/src/client/views/appoinment.html
+++ b/src/client/views/appoinment.html
@@ -16,9 +16,9 @@
                     <ul>                            
                         <li><a href="doctor.html">Doctors</a></li>
                         <li><a href="hospital.html">Hospitals</a></li>
-                        <li>Treatment</li>
+                        <li><a href="treatments.html">Treatments</a></li>
                         <li>Other Services</li>
-                        <li>About</li>
+                        <li><a href="aboutUs.html">About</a></li>
                     </ul>
             </div>
             <div class="navButtons desktop">
