--- a/src/client/views/doctor's-profile.html
+++ b/src/client/views/doctor's-profile.html
@@ -16,9 +16,9 @@
                     <ul>                            
                         <li><a href="doctor.html">Doctors</a></li>
                         <li><a href="hospital.html">Hospitals</a></li>
-                        <li>Treatment</li>
+                        <li><a href="treatments.html">Treatments</a></li>
                         <li>Other Services</li>
-                        <li>About</li>
+                        <li><a href="aboutUs.html">About</a></li>
                     </ul>
             </div>
             <div class="navButtons desktop">
@@ -128,9 +128,9 @@
                     <ul>                       
                         <li><a href="doctor.html">Doctors</a></li>
                         <li><a href="hospital.html">Hospitals</a></li>
-                        <li>Treatment</li>
-                        <li>Contact</li>
-                        <li>FAQs</li>
+                        <li><a href="treatments.html">Treatments</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="FAQ.html">FAQs</a></li>
                     </ul>
                 </div> 
                 <div class="foot-list2">
