--- a/src/client/css/doctor.css
+++ b/src/client/css/doctor.css
@@ -2,7 +2,7 @@
   --sky-blue:#1da1f2;
   --lt-skyblue:rgb(124, 176, 212);
   --dark-blue:#13132e;
-  --light-blue:#94bedd;
+  --light-blue:#94bedd3d;
   --deep-blue:#7ab0d4;
   --grey:grey;
   --mid-grey:#595a5a46;
