--- a/src/client/views/FAQ.html
+++ b/src/client/views/FAQ.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Tvastra/Doctor's Profile</title>
+        <title>Tvastra/FAQ</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
         <link rel="stylesheet" href="../css/reset.css">
@@ -38,7 +38,50 @@
         </section>
 
         <section class="mainContainer">
-            <div class="subContainer">
+            <div class="faq">
+                <div class="faqItems">
+                    <h5>How do I make Payments?</h5>
+                    <i class="fas fa-angle-down angle-icon accordion-btn fa-rotate-180"></i>
+                </div>
+                <p class="description">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit repudiandae enim obcaecati! Doloremque alias, harum suscipit, enim ipsum cupiditate qui. Ipsum delectus deleniti distinctio, alias, earum officiis accusamus consectetur eius.
+                </p>
+            </div>
+            <div class="faq">
+                <div class="faqItems">
+                    <h5>There is not enough money in my Portea Wallet for making a payment. What do I do?</h5>
+                    <i class="fas fa-angle-down angle-icon accordion-btn"></i>
+                </div>
+            </div>
+            <div class="faq">
+                <div class="faqItems">
+                    <h5>Can I transfer balance in Portea Wallet balance to another user?</h5>
+                    <i class="fas fa-angle-down angle-icon accordion-btn"></i>
+                </div>
+            </div>
+            <div class="faq">
+                <div class="faqItems">
+                    <h5>Is Portea Money the same as Portea Wallet?</h5>
+                    <i class="fas fa-angle-down angle-icon accordion-btn"></i>
+                </div>
+            </div>
+            <div class="faq">
+                <div class="faqItems">
+                    <h5>Refund</h5>
+                    <i class="fas fa-angle-down angle-icon accordion-btn"></i>
+                </div>
+            </div>
+            <div class="faq">
+                <div class="faqItems">
+                    <h5>What is a Family ID?</h5>
+                    <i class="fas fa-angle-down angle-icon accordion-btn"></i>
+                </div>
+            </div>
+            <div class="faq">
+                <div class="faqItems">
+                    <h5>Who can be added as Family?</h5>
+                    <i class="fas fa-angle-down angle-icon accordion-btn"></i>
+                </div>
             </div>
         </section>
         
